# cor24-rs

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: deploy.yml
components/: Cargo.toml
components/src/: lib.rs
components/src/components/: header.rs  memory_viewer.rs  mod.rs  modal.rs  program_area.rs  register_panel.rs  rust_pipeline.rs  sidebar.rs
docs/: ai_agent_instructions.md  isa-reference.md
docs/research/: 2026-03-03-look-at-files-in-cor24-tb-to-identify-files-that-c.txt  analysis.md  cor24-comparison-visual.md  cor24-comparison.csv  cor24-comparison.md  cor24-ranking.md  feedback1.txt  feedback2a.txt  feedback2b.txt  feedback3.txt  lessthan.c  spm.c
rust-to-cor24/: Cargo.toml
rust-to-cor24/examples/blink/: blink.lst  blink.s
rust-to-cor24/examples/blink/src/: lib.rs
rust-to-cor24/src/: run.rs
src/: app.rs  assembler.rs  challenge.rs  lib.rs  wasm.rs
src/cpu/: executor.rs  instruction.rs  mod.rs  state.rs
styles/: asm-game.css  layout.css
