[package]
name = "components"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Shared UI components for COR24 emulator"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlTextAreaElement", "console"] }
gloo = "0.11"
