[package]
name = "wasm2cor24"
version = "0.1.0"
edition = "2021"
description = "Translate WASM to COR24 assembly"

[workspace]
exclude = ["examples/blink"]

[dependencies]
wasmparser = "0.121"
anyhow = "1.0"

[[bin]]
name = "wasm2cor24"
path = "src/main.rs"

[[bin]]
name = "cor24-run"
path = "src/run.rs"

[dev-dependencies]
